module12/02-http-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-http-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: go-http-server
    spec:
      containers:
        - name: go-http-server
          imagePullPolicy: Always
          image: kuokou1/go-web-server:v1.0 
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: go-http-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: go-http-server
